# gear-miner

./: .gitmodules  Cargo.toml  build.rs  package-lock.json  package.json
docs/: Cargo.783f82f8.toml  Cargo.afbead19.toml  index.html  static.0b42c789.js  static.0b42c789.js.map  static.50e1d6e3.js  static.50e1d6e3.js.map  static.5d8740de.js  static.5d8740de.js.map  static.77de5100.js  static.7af6ecb8.js  static.7af6ecb8.js.map  static.f447cae8.js  static.f447cae8.js.map  styles.164d45a1.css  styles.164d45a1.css.map  styles.164d45a1.js  styles.164d45a1.js.map  styles.1baf7e7d.css  styles.1baf7e7d.css.map  styles.7258e875.css  styles.7258e875.css.map  styles.c6d10409.css  styles.c6d10409.css.map  styles.edc3fff1.css  styles.edc3fff1.css.map  yew_app_bg.32b46bf3.wasm  yew_app_bg.8d7de2d8.wasm  yew_app_bg.90a25c8e.wasm  yew_app_bg.a31f2430.wasm  yew_app_bg.bb0722df.wasm  yew_app_bg.c898f25b.wasm  yew_app_bg.d7982bfb.wasm
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  data.rs  lang.rs  lib.rs
src/agents/: miner.rs
src/components/: gear.rs  mod.rs  nav.rs
src/routes/: about.rs  home.rs  mod.rs
static/: index.html  styles.scss
